# catatonit

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Makefile.am  README.md  autogen.sh  catatonit.c  config.h.in  configure.ac
.github/workflows/: ci.yml
hack/: release.sh
